[metadata]
version = attr: sqlmesh.__version__

[mypy]
plugins = pydantic.mypy
no_implicit_optional = True

[mypy-api.*]
ignore_missing_imports = True

[mypy-examples.*]
ignore_missing_imports = True

[mypy-airflow.*]
ignore_missing_imports = True

[mypy-astor.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[mypy-hyperscript.*]
ignore_missing_imports = True

[mypy-py.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-graphviz.*]
ignore_missing_imports = True

[mypy-ipywidgets.*]
ignore_missing_imports = True

[mypy-google.*]
ignore_missing_imports = True

[autoflake]
in-place = True
expand-star-imports = True
remove-all-unused-imports = True
ignore-init-module-imports = True
remove-duplicate-keys = True
remove-unused-variables = True
quiet = True

[isort]
profile=black
known_first_party=sqlmesh
