[metadata]
version = attr: sqlmesh.__version__

[mypy]
plugins = pydantic.mypy
no_implicit_optional = True
disallow_untyped_defs = True

[mypy-api.*]
ignore_missing_imports = True

[mypy-examples.*.macros.*]
disallow_untyped_defs = False

[mypy-airflow.*]
ignore_missing_imports = True

[mypy-tests.*]
disallow_untyped_defs = False

[mypy-astor.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[mypy-hyperscript.*]
ignore_missing_imports = True

[mypy-py.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-graphviz.*]
ignore_missing_imports = True

[mypy-ipywidgets.*]
ignore_missing_imports = True

[mypy-google.*]
ignore_missing_imports = True

[mypy-snowflake.*]
ignore_missing_imports = True

[mypy-redshift_connector]
ignore_missing_imports = True

[mypy-databricks.*]
ignore_missing_imports = True

[mypy-faker.*]
ignore_missing_imports = True

[mypy-agate.*]
ignore_missing_imports = True

[mypy-databricks_cli.*]
ignore_missing_imports = True

[mypy-fsspec]
ignore_missing_imports = True

[mypy-mysql.*]
ignore_missing_imports = True

[mypy-psycopg2.*]
ignore_missing_imports = True

[mypy-langchain.*]
ignore_missing_imports = True

[mypy-pytest_lazyfixture.*]
ignore_missing_imports = True

[mypy-dbt.adapters.*]
ignore_missing_imports = True

[mypy-slack_sdk.*]
ignore_missing_imports = True

[autoflake]
in-place = True
expand-star-imports = True
remove-all-unused-imports = True
ignore-init-module-imports = True
remove-duplicate-keys = True
remove-unused-variables = True
quiet = True

[isort]
profile=black
known_first_party=sqlmesh
